--- a/_posts/2014-09-23-blogpost-1.html
+++ b/_posts/2014-09-23-blogpost-1.html
@@ -10,7 +10,8 @@ lang: sq
 	<a href="http://tablo-al.com/buxheti-i-hapur/" target="_blank">Buxheti i hapur</a> është një aplikacion që bën vizualizimin e zërave të buxhetit të Republikës së Shqiperisë ndër vite,
 	për të bërë më të qartë grafikisht ecurinë e tij gjatë viteve, si dhe shpërndarjen sipas funksioneve. 
 	Të dhënat janë marrë nga <a href="http://www.financa.gov.al/al/raportime/buxheti/buxheti-ne-vite" target="_blank"> faqja e Ministrisë së Financave</a>. 
-	Në kohën e ndërtimit të aplikacionit, në këtë faqe gjendeshin vetëm të dhënat nga viti 2011 e në vazhdim, por sot mund te gjesh të dhëna që prej vitit 2003,
+	Në kohën e ndërtimit të aplikacionit, në këtë faqe gjendeshin vetëm të dhënat nga viti 2011 e në vazhdim, por sot mund te gjesh të dhëna që prej vitit 2003 (urime administratës për
+	transparencën, megjithëse mire do ishte sikur edhe ato t'i hidhnin në një format më të përdorshëm, dhe jo si .docx),
 	çka e bën më interesant aplikacionin pasi mundëson krahasimin e shifrave në një periudhë më të gjatë kohore, dhe mund te kuptojme më qartë se si ka ecur buxheti gjate 
 	gjithë kësaj kohe.</p>
 	<p>Aplikacioni është ndërtuar me gjuhën e programimit <a href="https://processing.org/" target="_blank">Processing</a> dhe përshtatur për web me librarinë 
@@ -36,7 +37,7 @@ lang: sq
 	me kategorinë "buxheti i hapur". 
 	</p>
 </article>
-<figure class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+<figure class="col-lg-4 col-lg-offset-1 col-md-4 col-md-offset-1 col-sm-12 col-xs-12">
 	<img class="fit-image" alt="Buxheti i hapur, screenshot" src='/reclaim/img/portfolio/buxheti-i-hapur/buxhetihapur.png'>
 	<figcaption></figcaption>
 </figure>
