--- a/projects/election-map/index.html
+++ b/projects/election-map/index.html
@@ -9,12 +9,19 @@ subtitle: Innovation is now an empty signifier
 	<h2 class="left fix-alignment">HARTA ZGJEDHORE <span class="gray"> ______________</span></h2>
 	<br/>
 	<article class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-	
+	<p class="normal"><span>Titulli:</span> Harta zgjedhore, lokale 2015</p>
+	<p class="normal"><span>Përshkrimi:</span> Hartë interaktive me rezultatet e zgjedhjeve lokale 2015.</p>
+	<p class="normal"><span>Autori:</span> Grigor Malo</p>
+	<p class="normal"><span>Versioni:</span> 1</p>
+	<p class="normal"><span>Data e publikimit:</span> 21.06.2015</p>
+	<p class="normal"><span>Gjuhët:</span> Cartodb.js, d3.js</p>
+	<p class="normal"><span>Projekti:</span> <a href="http://grigorm.github.io/lokalet2015" target="_blank">Ndiq linkun</a></p>
+	<p class="normal"><span>Kodi burim:</span> <a href="#" target="_blank">Ndiq linkun<i class="fa fa-github fac"></i></a></p>		
 	</article>
 </section>
 <aside class="col-lg-3 col-md-3 col-sm-3 col-xs-12 category-sidebar">
 <h2>Postime rreth projektit</h2>
-{% for post in site.categories.harta_zgjedhore %}
+{% for post in site.categories.lokalet2015 %}
 	<li><a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
 </aside>
