--- a/projects/noise-generator/index.html
+++ b/projects/noise-generator/index.html
@@ -9,7 +9,13 @@ subtitle: Innovation is now an empty signifier
 	<h2 class="left fix-alignment">NOISE GENERATOR <span class="gray"> ______________</span></h2>
 	<br/>
 	<article class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-	
+	<p class="normal"><span>Titulli:</span> Buxheti i hapur</p>
+	<p class="normal"><span>Përshkrimi:</span> Aplikacion eksperimental për procesim imazhi.</p>
+	<p class="normal"><span>Autori:</span> Grigor Malo</p>
+	<p class="normal"><span>Versioni:</span> 1</p>
+	<p class="normal"><span>Data e publikimit:</span> 15.03.2014</p>
+	<p class="normal"><span>Gjuhët:</span> Processing</p>
+	<p class="normal"><span>Kodi burim:</span> <a href="#" target="_blank">Ndiq linkun<i class="fa fa-github fac"></i></a></p>	
 	</article>
 </section>
 <aside class="col-lg-3 col-md-3 col-sm-3 col-xs-12 category-sidebar">
