Animation and small design fixes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ subTitle: Innovation is now an empty signifier.
 ---
 <script>
 var canvas, nav, title;
-var rectang;
+var rectang = new Array(2);
 var arcs = new Array(3);
 var sines = new Array(1);
 
@@ -13,7 +13,9 @@ function setup(){
 	canvas = createCanvas(window.innerWidth, window.innerHeight);
 	createTitle();
 	navigation();
-	rectang = new Rects();
+	for(var i =0; i<rectang.length; i++){
+		rectang[i] = new Rects();
+	}
 	for(var i =0; i<arcs.length; i++){
 		arcs[i] = new Arcs();
 	}	
@@ -43,7 +45,9 @@ function navigation(){
 
 function draw(){
 	background(255);
-	rectang.be();
+	for(var i=0; i<arcs.length; i++){
+		rectang[i].be();
+	}
 	for(var i=0; i<arcs.length; i++){
 		arcs[i].be();
 	}
@@ -166,6 +170,8 @@ function Rects(){
 	this.x = random(30, width-30);
 	this.y = random(30, height-30);
 	this.angle = random(TWO_PI);
+	if(random(1)>0.5) this.rotSpeed = 0.02;
+	else this.rotSpeed = -0.02;
 	this.op = random(-150, -100);
 	this.life = random(100, 400);
 	this.reborn = random(-200, -50);
@@ -178,7 +184,7 @@ function Rects(){
 			rotate(this.angle);
 			stroke(0, this.op);
 			rect(0, 0, this.w, this.h);
-			this.angle += 0.02;
+			this.angle += this.rotSpeed;
 			pop();
 		}
 		this.life--;
@@ -191,8 +197,10 @@ function Rects(){
 		if(this.op < this.reborn){
 			this.x = random(30, width-30);
 			this.y = random(30, height-30);
+			if(random(1)>0.5) this.rotSpeed = 0.02;
+			else this.rotSpeed = -0.02;				
 			this.life = random(100, 400);
-			this.op = 255;		
+			this.op = 255;				
 			this.reborn = random(-200, -50);
 		}
 	}	
