--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ function navigation(){
 
 function draw(){
 	background(255);
-	for(var i=0; i<arcs.length; i++){
+	for(var i=0; i<rectang.length; i++){
 		rectang[i].be();
 	}
 	for(var i=0; i<arcs.length; i++){
