--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ function navigation(){
 	projects.parent('menu');
 	var blog = createA('/reclaim/archive', 'blog');
 	blog.parent('menu');
-	var about = createA('/reclaim/about', 'about');
+	var about = createA('/reclaim/about', 'rreth faqes');
 	about.parent('menu');	
 }
 
