--- a/about/index.html
+++ b/about/index.html
@@ -11,25 +11,23 @@ subTitle: Kush, çfarë, pse?
 	<div class="fix-alignment" id="about" itemscope itemtype="http://schema.org/Person">
 		<p>
 		Kjo faqe shërben si blogu im personal. Këtu mund të gjenden postime mbi teknika dhe mjete që unë i konsideroj interesante, tutoriale, projekte te ndryshme open source, 
-		por edhe kritika mbi narrativat dominante në botën e teknologjisë. Vetë website është ndertuar me faqe statike, pra pa servera dhe databaza,
-		duke përdorur <a href="https://pages.github.com/" target="_blank">Github Pages</a> dhe <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>. 
-		Veç faktit që nuk të duhet të paguash asgje (përveç emrit te domainit), kjo teknikë të jep më shumë kontroll mbi postimet e tua, e bën strukturën
-		e faqes më të qartë, dhe si një faqe personale, te jep mundësi te kontrollosh prezencën tënde dixhitale, larg platformave të mëdha dhe drejt 
-		një web-i të më të decentralizuar, siç ishte menduar dhe nga krijuesit e tij.
+		por edhe kritika mbi narrativat dominante në botën e teknologjisë. Vetë website është ndertuar me faqe statike duke përdorur 
+		<a href="https://pages.github.com/" target="_blank">Github Pages</a> dhe <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>. 
+		Veç faktit që nuk të duhet të paguash asgje (përveç emrit te domainit, që prapë është opsional), kjo teknikë të jep më shumë kontroll mbi 
+		postimet e tua, e bën strukturën e faqes më të qartë, dhe si një faqe personale, te jep mundësi te kontrollosh prezencën tënde dixhitale, 
+		larg platformave të mëdha dhe drejt një web-i të më të lirë dhe të decentralizuar, siç ishte konceptuar në fillimet e tij.
 		<br/><br/>
-		Unë jam <span itemprop="name">Grigor Malo</span>, i diplomuar për Inxhinieri Informatike, dhe momentalisht punoj si <span itemprop="jobTitle">
-		web developer</span>. Mund të vetëpërshkruhem si teknoskeptik dhe i majtë radikal. I interesuar rreth web-it, kodimit kreativ, vizualizimeve, politikës, kritikës shoqërore dhe teknologjike dhe
-		muzikës. 
+		Unë jam <span itemprop="name">Grigor Malo</span>, i diplomuar për Inxhinieri Informatike, dhe punoj si <span itemprop="jobTitle">
+		web developer dhe java developer</span>. Për nga bindjet mund të vetëpërshkruhem si i majtë radikal dhe teknoskeptik. 
+		I interesuar rreth web-it, kodimit kreativ, vizualizimeve, politikës, kritikave shoqërore dhe teknologjike dhe muzikës. 
 		<br/><br/>
-		Mënyra kontaktimi: <br/><br/>
-		<!--<a href="https://twitter.com/grigormalo" target="_blank"><span itemprop="url">Twitter</span></a><br/>
-		<a href="https://github.com/GrigorM" target="_blank"><span itemprop="url">Github</span></a><br/>
-		<a href="https://www.facebook.com/grigor.komunisti" target="_blank"><span itemprop="url">Facebook</span></a><br/>
-		<a href="mailto:grigormalo@gmail.com" target="_blank"><span itemprop="url">Email</span></a><br/>
-		<a href="https://grigormalo.withknown.com/" target="_blank"><span itemprop="url">Known</span></a><br/>-->
+		Më gjeni në <a href="https://twitter.com/grigormalo" target="_blank"><span itemprop="url">Twitter</span></a> ose në 
+		<a href="https://github.com/GrigorM" target="_blank"><span itemprop="url">Github</span></a>.<br/>
+		Email: <a href="mailto:grigormalo@gmail.com"><span itemprop="url">grigormalo@gmail.com</span></a>
+		<!--<a href="https://grigormalo.withknown.com/" target="_blank"><span itemprop="url">Known</span></a><br/>
 		{% for social in site.social %}
 			<a href="{{ social.url }}" class="soc"><i class="fa fa-{{ social.icon }} fac"></i> <span>{{ social.title }}</span></a>&nbsp;&nbsp;
-		{% endfor %}		
+		{% endfor %}-->
 		</p>
 	</div><br/>
 	<div class="col-lg-5 col-md-6 col-sm-8 col-xs-12" id="twitterfeed">
